# sejm-stats

./: pyproject.toml  readme.md
sejm_stats/: __init__.py  __main__.py
sejm_stats/stats/: __init__.py  base.py  client.py  constants.py  stats.py  types.py  utils.py
