[tool.poetry]
name = "sejm-stats"
version = "0.1.0"
description = ""
authors = ["Yarvin <yavinlecretin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.2"
aiohttp = "^3.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
